[workspace]
members = ["llvm-sys"]

[package]
name = "ono"
version = "0.1.0"
authors = ["Peter Delevoryas <peter@pjd.dev>"]
edition = "2024"

[[bin]]
name = "ono"
path = "src/main.rs"

[dependencies.llvm-sys]
path = "llvm-sys"

[dependencies.clang]
version = "2.0.0"
features = ["runtime", "clang_10_0"]

[dev-dependencies]
filecheck = "0.4.0"
